[metadata]
name = rando
author = Brandon LeBlanc
author-email = brandon@leblanc.codes
summary = rando is a weighted random generator.
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/demosdemon/leblanc.codes
license = MIT
classifier =
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python 3
